<resources>
    <string name="app_name">Uplayer</string>
    <string name="title_unknown">Unknown</string>
    <string name="title_music">music</string>
    <string name="title_video">video</string>
    <string name="title_photo">photo</string>
    <string name="title_album">Album</string>
    <string name="title_artist">Artist</string>
    <string name="title_tracks">Tracks</string>
    <string name="title_library">LIBRARY</string>
    <string name="title_renderer">RENDERER</string>
    <string name="title_media">MEDIA</string>
    <string name="title_playlist">Playlist</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="action_play">Play</string>
    <string name="action_add_to_playlist">Add to playlist</string>
</resources>
