<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/nav_header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_nav_header"
        app:layout_heightPercent="40%"/>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/nav_header"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/nav_header"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:text="@string/title_renderer"
                android:textColor="@color/grey_600"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <com.github.sachil.uplayer.ui.content.PatchedExpandableListView
                android:id="@+id/nav_renderer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:groupIndicator="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:background="@color/grey_400"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:text="@string/title_library"
                android:textColor="@color/grey_600"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <com.github.sachil.uplayer.ui.content.PatchedExpandableListView
                android:id="@+id/nav_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:groupIndicator="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:background="@color/grey_400"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:clickable="false"
                android:text="@string/title_media"
                android:textColor="@color/grey_600"
                android:textSize="14sp"
                android:textStyle="bold"/>

            <com.github.sachil.uplayer.ui.content.PatchedExpandableListView
                android:id="@+id/nav_media"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:groupIndicator="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginTop="16dp"
                android:background="@color/grey_400"/>


            <RelativeLayout
                android:id="@+id/nav_settings"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">


                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    app:materialIcon="settings"
                    app:materialIconColor="@color/grey_600"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:text="@string/action_settings"
                    android:textColor="@color/grey_600"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/grey_400"/>

            <RelativeLayout
                android:id="@+id/nav_exit"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:background="?attr/selectableItemBackground"
                android:clickable="true">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    app:materialIcon="logout"
                    app:materialIconColor="@color/grey_600"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="72dp"
                    android:text="@string/action_exit"
                    android:textColor="@color/grey_600"
                    android:textSize="16sp"/>
            </RelativeLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.percent.PercentRelativeLayout>
